fix bug for backend deployement.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/appp.js"
+            "dest": "/app.js"
         }
     ]
 }
